Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/recovery/SuperMethodCallBroken.out
SuperMethodCallBroken.java:8:53: compiler.err.cant.resolve: kindname.class, Undef, , 
1 error
